@@ -21646,7 +21646,7 @@
 +
 --- /dev/null
 +++ b/sysdeps/unix/bsd/bsd4.4/kfreebsd/ldsodefs.h
-@@ -0,0 +1,60 @@
+@@ -0,0 +1,58 @@
 +/* Run-time dynamic linker data structures for loaded ELF shared objects.
 +   Copyright (C) 2001, 2002 Free Software Foundation, Inc.
 +   This file is part of the GNU C Library.
@@ -21668,16 +21668,14 @@
 +
 +#ifndef	_LDSODEFS_H
 +
-+/* Get the real definitions.  */
-+#include_next <ldsodefs.h>
-+
-+/* Now define our stuff.  */
-+
 +/* FreeBSD puts some extra information into an auxiliary vector when it
 +   execs ELF executables.  Note that it uses AT_* values of 10 and 11
 +   to denote something different than AT_NOTELF and AT_UID, but this is
 +   not a problem since elf/dl-support.c ignores these AT_* values.  */
 +#define HAVE_AUX_VECTOR
++
++/* Get the real definitions.  */
++#include_next <ldsodefs.h>
 +
 +/* Used by static binaries to check the auxiliary vector.  */
 +extern void _dl_aux_init (ElfW(auxv_t) *av) internal_function;
