@@ -4,6 +4,10 @@ glibc (2.22-8) UNRELEASED; urgency=medium
   * hurd-i386/cvs-gprof-tick.diff: Cherry-pick from upstream to fix gprof
     timing.
 
+  [ Aurelien Jarno ]
+  * patches/kfreebsd/local-sysdeps.diff: update to revision 6015 (from
+    glibc-bsd) to fix FTBFS.
+
  -- Samuel Thibault <sthibault@debian.org>  Tue, 19 Apr 2016 23:28:29 +0200
 
 glibc (2.22-7) unstable; urgency=medium
